# cli-autocomplete-engine

./: .gitignore  CMakeLists.txt  README.md
data/sample_docs/: doc1.txt  doc2.txt
include/: FuzzyMatcher.h  Indexer.h  Serializer.h  TopKHeap.h  Trie.h  TrieNode.h
src/: FuzzyMatcher.cpp  Indexer.cpp  Serializer.cpp  TopKHeap.cpp  Trie.cpp  TrieNode.cpp  main.cpp
